# kaniko-login

./: Cargo.toml  README.md  output.json
src/: lib.rs  main.rs  panics.rs  password.rs  registry.rs
