[package]
name = "kaniko-login"
version = "0.1.2"
edition = "2021"
authors = ["Kirill Vedmetskii <kirik@kirill-vedmetskii.ru"]
license = "MIT"
rust-version = "1.78.0"
description = "The util for eazy login for kaniko"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
serde = { version = "1.0.209", features = ["std", "derive"] }
serde_json = "1.0.127"
base64 = "0.22.1"
