[package]
name = "kaniko-login"
version = "0.1.5"
edition = "2021"
authors = ["Kirill Vedmetskii <kirik@kirill-vedmetskii.ru"]
license = "MIT"
rust-version = "1.78.0"
description = "The util for eazy login for kaniko"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive", "std"] }
serde_json = "1.0.128"
base64 = "0.22.1"
